fix: enhance form layout by adding field frames for title, description, and due date components; update styles for better alignment and spacing

--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -44,6 +44,16 @@
     font-family: 'Inter';
 }
 
+.field-frame{
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    width: 440px;
+}
+
+.field-frame-due-date{
+    height: 80px;
+}
 
 label, legend {
     font-family: 'Inter';
@@ -129,15 +139,23 @@ span {
 
 
 .a-t-input {
-    width: calc(440px - 44px);
+    /* width: calc(440px - 44px); */
     height: calc(48px - (2px + 24px));
     border-radius: 10px;
     padding: 12px 21px;
     border: 1px solid var(--input-border-color);
     font-family: 'Inter';
     font-size: 20px;
+    background-color: white;
 }
 
+.a-t-input:-webkit-autofill,
+.a-t-input:-webkit-autofill:hover,
+.a-t-input:-webkit-autofill:focus{
+  box-shadow: 0 0 0 1000px #fff inset !important;
+  -webkit-text-fill-color:#000 !important;
+  caret-color:#000;
+}
 
 
 .a-t-input::placeholder {
@@ -155,9 +173,9 @@ span {
 
 
 .date-field {
-    position: relative;
-    display: inline-block;
-    width: 440px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     height: 48px;
 }
 
@@ -165,8 +183,10 @@ span {
     font-family: 'Inter';
     color: (--input-border-color);
     z-index: 200;
-    padding-right: 50px;
-    width: calc(440px - (12px + 50px + 11px));
+    
+    /* padding-right: 50px; */
+    /* width: calc(440px - (12px + 50px + 11px)); */
+    /* width: 80%; */
 }
 
 .date-input.focus {
@@ -199,11 +219,8 @@ span {
     transform: translateY(-108%) translateX(5px);
 }
 
-.date-field .date-trigger {
-    position: absolute;
-    right: 16px;
-    top: 50%;
-    transform: translateY(-50%);
+.date-trigger {
+    transform: translateY(-240%) translateX(-70%);
     width: 22px;
     height: 22px;
     padding: 0;
@@ -211,6 +228,7 @@ span {
     background: none;
     cursor: pointer;
     z-index: 300;
+    align-self: flex-end;
 }
 
 .date-trigger>div {
@@ -265,7 +283,7 @@ span {
 }
 
 .a-t-text-area {
-    max-width: calc(440px - (2 * 1px) - (2 * 18px));
+    /* max-width: calc(440px - (2 * 1px) - (2 * 18px)); */
     max-height: calc(120px - (2 * 1px) - (2 * 16px));
     border-radius: 10px;
     border: 1px solid var(--input-border-color);
